替换了oracle jdk的BASE64加密类成open jdk的